Added link to go back to cause from conversation page. Updated link styles.

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -73,9 +73,11 @@ small.small-block {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
     color: #3299bb;
+    text-decoration: none;
 }
 a:hover {
     color: #1eaeda;
+    text-decoration: underline;
 }
 
 /* Alerts 
