--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -338,12 +338,43 @@ h3 span{
  font-weight: bold;
 }
 .post {
-    /*border-left: 1px solid #ff9900;*/
     -moz-box-shadow: 0 0 10px #e5e5e5;
     -webkit-box-shadow: 0 0 10px #e5e5e5;
     box-shadow: 0 0 10px #e5e5e5;
     padding: 1em;
+    margin-top: 2em;
 }
+.post article {
+    height: 85px;
+    overflow: hidden;
+    position: relative;
+}
+.post article .fade {
+    position: absolute; 
+    bottom: 0;
+    width:100%;
+    height: 85px;
+    background: -webkit-linear-gradient(
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 1) 100%
+    ); 
+    background-image: -moz-linear-gradient(
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 1) 100%
+    );
+    background-image: -o-linear-gradient(
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 1) 100%
+    );
+    background-image: linear-gradient(
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 1) 100%
+    );
+    background-image: -ms-linear-gradient(
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 1) 100%
+    );
+} 
 .post article h1, .comment article h1, 
 .post article h2, .comment article h2,
 .post article h3, .comment article h3,
