--- a/app/templates/posts/comment_form.html
+++ b/app/templates/posts/comment_form.html
@@ -2,24 +2,26 @@
 
 {% block content %}
 {% from "helpers/forms.html" import render_field, render_boolean %}
-<form id="comment" name="comment" action="" method="post">
-    {{ form.hidden_tag() }}
-    <div class="row">
-        <fieldset>
-            <div class="six columns offset-by-three">
-                {{ render_field(form.body, class="u-full-width")  }}
-            </div>
-        </fieldset>
-    </div>
-    <div class="row">
-        <fieldset>
-            <div class="three columns offset-by-three">
-                <input id="post" type="submit" value="{{ _('Post') }}"
-                    class="button button-primary u-mobile-fixed-bottom">
-            </div>
-            <div class="three columns">
-            </div>
-        </fieldset>
-    </div>
-</form>
+<div class="full-width-container">
+    <form id="comment" name="comment" action="" method="post">
+        {{ form.hidden_tag() }}
+        <div class="row">
+            <fieldset>
+                <div class="six columns offset-by-three u-add-margin-top">
+                    {{ render_field(form.body, class="u-full-width")  }}
+                </div>
+            </fieldset>
+        </div>
+        <div class="row">
+            <fieldset>
+                <div class="three columns offset-by-three">
+                    <input id="post" type="submit" value="{{ _('Post') }}"
+                        class="button button-primary u-mobile-fixed-bottom">
+                </div>
+                <div class="three columns">
+                </div>
+            </fieldset>
+        </div>
+    </form>
+</div>
 {% endblock %}
