Cleaned up user profile details column

--- a/app/templates/users/index.html
+++ b/app/templates/users/index.html
@@ -16,17 +16,19 @@
                 <strong>{{ user.nickname }}</strong> 
                 {% if user.is_admin %} | <small>Admin</small>{% endif %}
             </span>
-            {% if current_user == user or current_user.is_admin %}
-                <a href="{{ url_for('users.edit', nickname=user.nickname) }}" class="button u-pull-right u-remove-margin-top">Edit</a>
-            {% endif %}
             {% if user.full_name %}
                 <h5 class="u-remove-margin-bottom">{{ user.full_name }}</h5>
             {% endif %}
             {% if current_user == user or current_user.is_admin %}
-                <em>(Other users won't see these details)</em>
+                <div class="u-add-margin-top">
+                    <small>Other users won't see these details</small>
+                </div>
                 {% if user.email %}<div>{{ user.email }}</div>{% endif %}
                 {% if user.phone %}<div>{{ user.phone }}</div>{% endif %}
                 {% if user.zip %}<div>{{ user.zip }}</div>{% endif %}
+            {% endif %}
+            {% if current_user == user or current_user.is_admin %}
+                <a href="{{ url_for('users.edit', nickname=user.nickname) }}" class="button u-full-width u-add-margin-top">Edit</a>
             {% endif %}
         </div>
         <div class="six columns">
