Fixed button on hover status and renamed button error class to danger

--- a/app/templates/posts/delete.html
+++ b/app/templates/posts/delete.html
@@ -29,7 +29,7 @@
             <fieldset>
                 <div class="three columns offset-by-three">
                     <input id="save" type="submit" value="Delete"
-                        class="button error u-mobile-fixed-bottom">
+                        class="button danger u-mobile-fixed-bottom">
                 </div>
             </fieldset>
         </div>
