--- a/app/templates/users/edit.html
+++ b/app/templates/users/edit.html
@@ -55,7 +55,7 @@
     <hr>
     <div class="row">
         <div class="twelve columns u-text-center">
-            <a href="{{ url_for('users.delete', nickname=user.nickname) }}" class="button">Delete Account</a>
+            <a href="{{ url_for('users.delete', nickname=user.nickname) }}" class="button danger">Delete Account</a>
         </div>
     </div>
 </form>
