--- a/app/templates/posts/post_form.html
+++ b/app/templates/posts/post_form.html
@@ -27,7 +27,7 @@
                 <div class="three columns">
                     {% if post %}
                     <a href="{{ url_for('.post_delete', slug=cause.slug, pk=post.id) }}"
-                        id="delete" class="button error u-mobile-fixed-bottom">
+                        id="delete" class="button danger u-mobile-fixed-bottom">
                         {{ _('Delete') }}
                     </a>
                     {% endif %}
