--- a/app/templates/admin/user_list.html
+++ b/app/templates/admin/user_list.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Users - {{ super() }}{% endblock title %}
+
 {% block content %}
 <div class="container u-add-margin-top">
   <div class="row">
