--- a/app/templates/posts/post.html
+++ b/app/templates/posts/post.html
@@ -1,6 +1,8 @@
 {% extends "base_form.html" %}
 {% set active_page = "discussion" %}
 
+{% block title %}{{ post.title }} - {{ super() }}{% endblock title %}
+
 {% block content %}
 {% from "helpers/users.html" import render_avatar %}
 <div class="full-width-container">
