FB OpenGraph, Twitter, & other <meta> tweaks

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% block meta %}
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
     <meta name="copyright" content="GPLv3">
     <meta name="application-name" content="Solid">
+
+    <meta property="fb:app_id" content="{{ fb_app_id }}"/>
     {% endblock meta %}
 
     <title>{% block title %}Solid{% endblock %}</title>
