--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -123,15 +123,18 @@
                 {{ _('Share') }}
             </a>
             <h4 class="u-add-margin-top">
-                {{ _('Creators') }}:
+                {{ _('%(count)s actions taken', count=cause.count_action_supports) }}
             </h4>
-            {% for u in cause.creators.all() %}
-                {{ render_avatar(u) }}
-            {% endfor %}
             <h4 class="u-add-margin-top">
                 {{ _('%(count)s supporters', count=cause.supporters.count()) }}:
             </h4>
             {% for u in cause.supporters.all() %}
+                {{ render_avatar(u) }}
+            {% endfor %}
+            <h4 class="u-add-margin-top">
+                {{ _('Creators') }}:
+            </h4>
+            {% for u in cause.creators.all() %}
                 {{ render_avatar(u) }}
             {% endfor %}
         </div>
