--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -146,6 +146,7 @@ a:hover {
     text-align: center;
     line-height: 2.1em;
     text-decoration: none;
+    font-size: 1.6rem;
 }
 .icon {
     width: 1em;
