--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -45,6 +45,7 @@
 {% block content %}
 {% from "helpers/modals.html" import render_modal %}
 {% from "helpers/users.html" import render_avatar %}
+{% from "helpers/actions.html" import render_action_list with context %}
 {% from "helpers/posts.html" import render_post_list %}
 <div class="section hero lazy" data-src="{{ url_for('static', filename=cause.image) }}">
     <div class="full-width-container">
@@ -131,69 +132,18 @@
         </div>
     </div>
     <hr>
+
     <div class="row">
         <div class="nine columns actions">
             <h3 id="actions">
                 {{ _('Take action to win') }}
                 <span>{{ _('(%(count)s current)', count=cause.actions.count()) }}</span>
             </h3>
-            <div class="row">
-                {% for action in cause.actions.all()[0:4] %}
-                    <a class="four columns support-action" 
-                       data-target="modal-action-{{ action.id }}">
-                        <h4>{{ action.title }}</h4>
-                        <p>{{ action.summary }}</p>
-                        <h6 class="u-remove-margin-bottom">
-                            {{ _('Supporters: %(count)s', count=action.supporters.count()) }}
-                        </h6>
-                        {% if action.expiration %}
-                            <h6>Expires: {{ action.expiration.strftime('%b. %d, %Y') }}</h6>
-                        {% endif %}
-                    </a>
-                    <div id="modal-action-{{ action.id }}" class="modal">
-                        <div>
-                            <h3 class="u-pull-left u-remove-margin-bottom">{{ action.title }}</h3>
-                            <a href="#" class="button-modal-close u-pull-right">
-                                <img src="/static/open-iconic/png/x-2x.png" alt="X" />
-                            </a>
-                            <p class="u-cf">
-                                {{ action.description|markdown }}
-                            </p>
-                            {% if current_user not in action.supporters.all() %}
-                            <p class="u-remove-margin-bottom u-pull-right">
-                                {% if action.link %}
-                                <a class="button button-primary support" rel="external"  target="_blank"
-                                    data-support-href="{{ url_for('causes.action_support', slug=cause.slug,
-                                    pk=action.id) }}"
-                                    href="{{ action.link }}">{{ _('Support!') }}</a>
-                                {% else %}
-                                <a class="button button-primary" href="{{ url_for('causes.action_support', slug=cause.slug,
-                                    pk=action.id) }}">{{ _('Support!') }}</a>
-                                {% endif %}
-                            </p>
-                            {% endif %}
-                            {% if current_user in cause.creators.all() or current_user.is_admin %}
-                            <p>
-                                <a class="button primary u-pull-right u-add-margin-right" 
-                                    href="{{ url_for('causes.action_edit', slug=cause.slug,
-                                    pk=action.id) }}">Edit!</a>
-                            </p>
-                            {% endif %}
-                            {% if action.supporters %}
-                            <p class="u-remove-margin-bottom u-pull-left">
-                                {% for supporter in action.supporters %}
-                                    {{ render_avatar(supporter) }}
-                                {% endfor %}
-                            </p>
-                            {% endif %}
-                            <br class="u-cf">
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
         </div>
     </div>
+    {{ render_action_list(cause) }}
     <hr>
+
     <div class="row">
         <div class="nine columns">
             <h3>{{ _('Conversation') }}</h3>
