--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -17,6 +17,7 @@
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/modal.js') }}"></script>
 <script src="{{ url_for('static', filename='jquery.lazy/jquery.lazy.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/conversation.js') }}"></script>
 <script>
     $(document).ready(function() {
         $('#stand-with-us').click(function() {
