--- a/app/templates/helpers/actions.html
+++ b/app/templates/helpers/actions.html
@@ -7,11 +7,15 @@ section (app/templates/styleguide/templating#)
 {% from "helpers/users.html" import render_avatar %}
 <a class="three columns support-action" 
    data-target="modal-action-{{ action.id }}">
-    <h4>{{ action.title }}</h4>
-    <p>{{ action.summary }}</p>
-    <h6 class="u-remove-margin-bottom">
-        {{ _('Supporters: %(count)s', count=action.supporters.count()) }}
-    </h6>
+    <h5>{{ action.title }}</h5>
+    <article class="u-add-margin-bottom">{{ action.summary }}</article>
+    <small class="action-support-counter u-pull-left">
+        <img class="icon" src="{{ url_for('static', filename='open-iconic/png/bullhorn-2x.png') }}"> 
+        {{ _('%(count)s supporters', count=action.supporters.count()) }}
+    </small>
+    <small class="u-pull-right">
+        {{ _('Details') }}
+    </small>
     {% if action.expiration %}
         <h6>Expires: {{ action.expiration.strftime('%b. %d, %Y') }}</h6>
     {% endif %}
